--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>触点营销后台管理</title>
+  <script src="http://api.map.baidu.com/api?v=2.0&ak=6bOBR0p9u2K5PnjtzWurHzHP"></script>
   <style>
     html,
     body,
