--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>触点营销后台管理</title>
+  <title>触点营销后台管理系统</title>
   <script src="http://api.map.baidu.com/api?v=2.0&ak=6bOBR0p9u2K5PnjtzWurHzHP"></script>
   <style>
     html,
